<resources>
    <string name="app_name">Quotion</string>
    <string name="back">Back</string>
    <string name="calendar">Calendar</string>
    <string name="home">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_intro_1">UpTodo</string>
    <string name="intro_skip_2">SKIP</string>
    <string name="intro_back_2">BACK</string>
    <string name="btn_next_intro2">NEXT</string>
    <string name="text1_intro2">You can easily manage all of your daily tasks in DoMe for free</string>
    <string name="text2_intro2">Manage your tasks</string>
    <string name="text1_intro3">Create daily routine</string>
    <string name="text2_intro3">In Uptodo you can create your personalized routine to stay productive</string>
    <string name="text1_intro4">Orgonaize your tasks</string>
    <string name="text2_intro4">You can organize your daily tasks by adding your tasks into separate categories</string>
    <string name="login_intro1">Welcome to UpTodo</string>
    <string name="login_intro2">Please login to your account or create new account to continue</string>
    <string name="intro_login">LOGIN</string>
    <string name="intro_create_account">CREATE ACCOUNT</string>
    <string-array name="time_period_array">
        <item>Ngày</item>
        <item>Tuần</item>
    </string-array>

    <string-array name="top_count_array">
        <item>Top 5</item>
        <item>Top 10</item>
    </string-array>

    <string-array name="category_options">
        <item>Free</item>
        <item>Busy</item>
    </string-array>

<!--    <string-array name="color_options">-->
<!--        <item>Gray</item>-->
<!--        <item>Red</item>-->
<!--        <item>Blue</item>-->
<!--    </string-array>-->

</resources>